--- a/bank-interface/src/Home.css
+++ b/bank-interface/src/Home.css
@@ -44,4 +44,20 @@
     font-weight: bold;
     margin-bottom: 40px; /* Space between heading and blocks */
   }
+
+  .smart-contract-btn {
+    margin-top: 20px;
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: bold;
+    color: white;
+    background-color: #007bff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  .smart-contract-btn:hover {
+    background-color: #0056b3;
+  }
   
