--- a/firm-interface/src/Components/TaskStyle.css
+++ b/firm-interface/src/Components/TaskStyle.css
@@ -4,6 +4,7 @@
     align-items: center;
     position: fixed;
     top: 0;
+    left: 0;
     width: 100%;
     height: 60px;
     background-color: #00A36C;
@@ -12,6 +13,7 @@
     padding: 20px 20px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     z-index: 1000;
+    box-sizing: border-box;
   }
 
   .taskbar-left .logo {
